--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.9.8",
     "bootstrap": "^4.4.1",
     "next": "^9.3.1",
     "react": "^16.13.1",
