--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "dependencies": {
     "@material-ui/core": "^4.9.8",
     "bootstrap": "^4.4.1",
-    "next": "^9.3.1",
+    "isomorphic-unfetch": "^3.0.0",
+    "next": "^9.3.5",
+    "node-fetch": "^2.6.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "swr": "^0.2.0"
   }
 }
